--- a/covid-19-simulator.html
+++ b/covid-19-simulator.html
@@ -20,8 +20,9 @@
 	<div id="container"></div>
 	<div id="hud">
 		<span id="time" style = "float: right; margin-right:1em"></span>
-		<span id="fps"></span>
-		<span id="agents"></span>
+		<img src="icons/fps.svg"><span id="fps"></span> &middot;
+		<img src="icons/people.svg"><span id="agents"></span> &middot;
+		<a class="link" href="covid-19-configurator.html"><img src="icons/gear.svg">config</a>
 	<div>
 
 	<script src="js/perlin.js"></script> <!-- from: https://github.com/joeiddon/perlin -->
