--- a/covid-19-configurator.html
+++ b/covid-19-configurator.html
@@ -26,7 +26,7 @@
 <body>
 <div class="page">
 <h2>COVID-19 Configurator
-	<div class="info">Click on the name of a parameter to add or remove it from
+	<div class="info">The COVID-19 simulation is controlled by <span id="param_count"></span> parameters. Click on the name of a parameter to add or remove it from
 	the list of your favourite parameters. DEBUG parameters are used to introduce
 	specific situation or behaviour. The information from this page is
 	stored only locally &ndash; it is not transmitted anywhere.
@@ -52,11 +52,11 @@
 
 	<script>
 		addNumeric(
-			'gs', 'Ground size', 500, {min:10, max:10000, step:10, fav:true},
+			'gs', 'Ground size', 500, {min:10, max:10000, step:10, fav:true, unit:'m'},
 			'The active area of the simulation in meters. Buildings and people will be bound to a square of this size.' );
 
 		addNumeric(
-			'es', 'Earth size', 50000, {min:1000, max:100000, step:1000},
+			'es', 'Earth size', 50000, {min:1000, max:100000, step:1000, unit:'m'},
 			'The area surrounding the simulation area. Its edge makes the horizon.' );
 
 		addNumeric(
@@ -85,36 +85,148 @@
 
 		addBoolean(
 			'dbwoh', 'Blocks with houses', false, {debug:true},
-			'If checked, generate blocks with houses. However, all <span class="ref">Blocks with ...</span> parameters are altogether not checked, then blocks with houses are generated.' );
+			'If checked, generate blocks with houses. However, all <em>Blocks with ...</em> parameters are altogether not checked, then blocks with houses are generated.' );
 
 		addBoolean(
 			'dbwoa', 'Blocks with apartments', false, {debug:true},
-			'If checked, generate blocks with apartments. However, all <span class="ref">Blocks with ...</span> parameters are altogether not checked, then blocks with apartments are generated.' );
+			'If checked, generate blocks with apartments. However, all <em>Blocks with ...</em> parameters are altogether not checked, then blocks with apartments are generated.' );
 
 		addBoolean(
 			'dbwoo', 'Blocks with offices', false, {debug:true},
-			'If checked, generate blocks with offices. However, all <span class="ref">Blocks with ...</span> parameters are altogether not checked, then blocks with offices are generated.' );
+			'If checked, generate blocks with offices. However, all <em>Blocks with ...</em> parameters are altogether not checked, then blocks with offices are generated.' );
 
 		addBoolean(
 			'dbwop', 'Blocks with parks', false, {debug:true},
-			'If checked, generate blocks with parks. However, all <span class="ref">Blocks with ...</span> parameters are altogether not checked, then blocks with parks are generated.' );
+			'If checked, generate blocks with parks. However, all <em>Blocks with ...</em> parameters are altogether not checked, then blocks with parks are generated.' );
 
 		addBoolean(
 			'dbwoz', 'Blocks with plazas', false, {debug:true},
-			'If checked, generate blocks with plazas. However, all <span class="ref">Blocks with ...</span> parameters are altogether not checked, then blocks with plazas are generated.' );
+			'If checked, generate blocks with plazas. However, all <em>Blocks with ...</em> parameters are altogether not checked, then blocks with plazas are generated.' );
 
 		addBoolean(
 			'dar', 'Auto rotate', false, {debug:true},
-			'If checked, the scene rotates continuously with speed defined by <span class="ref">Auto rotate speed</span>. The user can still use the mouse to rotate manually. If not checked, the scene does not move by itself.' );
+			'If checked, the scene rotates continuously with speed defined by <em>Auto rotate speed</em>. The user can still use the mouse to rotate manually. If not checked, the scene does not move by itself.' );
 
 		addNumeric(
-			'dars', 'Auto rotate speed', 0.3, {min:0, max:1, step:0.1, debug:true},
-			'The speed of automatic rotation measure in radians per second. The value is effective only if <span class="ref">Auto rotate</span> is checked, otherwise it has no effect.' );
+			'dars', 'Auto rotate speed', 0.3, {min:0, max:1, step:0.1, debug:true, unit:'rad/s', offset: 7},
+			'The speed of automatic rotation measure in radians per second. The value is effective only if <em>Auto rotate</em> is checked, otherwise it has no effect.' );
 
 		addBoolean(
 			'dri', 'Renderer info', false, {debug:true},
 			'If checked, shows renderer info (once per 10000 frames) in the JS console &ndash; number of geometries, textures, calls, lines, points and triangles.' );
+
+		addPercentage(
+			'dbuo', 'Building opacity', 1, {min:0, max:1, step:0.25, debug:true},
+			'Percentage of opacity of all buildings &ndash; houses, apartments and offices. At 100% the buildings are fully opaque, while at 0% they are fully transparent.' );
 			
+		addPercentage(
+			'dblo', 'Ground opacity', 1, {min:0, max:1, step:0.25, debug:true},
+			'Percentage of opacity of the ground &ndash; pavements, streets, grass. At 100% the ground is fully opaque, while at 0% it is fully transparent.' );
+			
+		addPercentage(
+			'dnmo', 'Navmesh opacity', 0, {min:0, max:1, step:0.25, debug:true},
+			'Percentage of opacity of the navigational mesh (navmesh) &ndash; crimson and orange areas showing locations of rooms, elevators, checkpoints, etc. At 100% the navmesh is fully opaque, while at 0% it is fully transparent. Navmeshes are shown on top of buildings and other 3D objects.' );
+			
+		addBoolean(
+			'dnmsf', 'Navmesh floors', false, {debug:true},
+			'If checked, generates images of navmesh rooms at the floor level. However, they are shown only if <em>Navmesh opacity</em> is not 0%.' );
+
+		addBoolean(
+			'dnmsl', 'Navmesh routes', false, {debug:true},
+			'If checked, generates images of navmesh routes. However, they are shown only if <em>Navmesh opacity</em> is not 0%.' );
+
+		addBoolean(
+			'dnmse', 'Navmesh elevators', false, {debug:true},
+			'If checked, generates images of navmesh elevators. However, they are shown only if <em>Navmesh opacity</em> is not 0%.' );
+
+		addBoolean(
+			'dsaad', 'Age diagram', false, {debug:true},
+			'If checked, shows a diagram of age distribution of people (number of people per age in years). The theoretical distribution is shown in crimson, the actual distribution is shown in blue. Click on the diagram to hide it.' );
+
+		addBoolean(
+			'dsvs', 'Viral diagram', false, {debug:true},
+			'If checked, shows a diagram of the viral shedding (infection level per time period). Higher values indicate higher probability of infecting nearby people. Vertical lines split the diagram into 14 periods. Click on the diagram to hide it.' );
+
+		addBoolean(
+			'dhr', 'Hide roofs', false, {debug:true},
+			'If checked, buildings are drawn without roofs and it is possibel to see people inside.' );
+
+		addBoolean(
+			'dcvoa', 'Look at people', false, {debug:true},
+			'If checked, when the simulation starts, sets the view point on the people. This can be used to find people if they are a small compact group in a large city.' );
+
+		addNumeric(
+			'dfa', 'Follow person', -1, {min:-1, max:50000, step:1, debug:true},
+			'Each person has an id number starting from 0. If this parameter cointains an existing person id, then the view point automatically follows this person as if spied from a drone. If the value is -1, such following is turned off.' );
+
+		addNumeric(
+			'dfah', 'Follow person health', -1, {min:-1, max:50000, step:1, debug:true},
+			'If this parameter cointains an existing person id, then the health status of this person is printed in the JS console. If the value is -1, such printing is turned off.' );
+
+		addBoolean(
+			'dsd', 'Show directions', false, {debug:true},
+			'If checked, prints the directions and axes outside the city boundary. The orientation is as if the city is looked from below.' );
+
+		addBoolean(
+			'daaf', 'Apartment floors', false, {debug:true},
+			'If checked, the floors of the apartment building are drawn. To see the floors the view point should be inside the building or <em>Building opacity</em> should be less than 100%.' );
+
+		addBoolean(
+			'dshtwa', 'Home-to-work arrow', false, {debug:true},
+			'If checked, an arrow is generated for each person pointing from home to office location.' );
+
+		addBoolean(
+			'dsr', 'Show route', false, {debug:true},
+			'If checked, show the route of each person as a sequence of arrows.' );
+
+		addBoolean(
+			'ddr', 'Print route', false, {debug:true},
+			'If checked, prints the route of each person in the JS console. This parameter is checked when there are a few people, preferable exactly one, i.e. <em>Agent count</em>=1.' );
+
+		addNumeric(
+			'drpa', 'Routes per person', 1, {min:1, max:200, step:1, debug:true},
+			'The number of routes generated for each person. Independent on the value, onle one of the routes is used. THe others only indicate what possibilities exists. This parameter is often used with <em>Show route</em> checked and <em>Agent count</em>=1.' );
+
+		addNumeric(
+			'daa', 'Follow person actions', -1, {min:-1, max:50000, step:1, debug:true},
+			'If this parameter cointains an existing person id, then the timestamped actions of  this person are printed in the JS console. If the value is -1, such printing is turned off.' );
+
+		addBoolean(
+			'dal', 'Population whereabouts', false, {debug:true},
+			'If checked, once per second prints in the JS console the number of people at home, commuting and at work.' );
+			
+		addBoolean(
+			'dah', 'Population health', false, {debug:true},
+			'If checked, once per second prints in the JS console the number of infected people.' );
+			
+		addBoolean(
+			'dspg', 'Manual sun', false, {debug:true},
+			'If checked, adds a control for manually changing the sun position. This affects lightings and shadows (if they are turned on). The position is set as hours &ndash; i.e. 18.5 corresponds to 18:30.' );
+			
+		addBoolean(
+			'daw', 'All white', false, {debug:true},
+			'If checked, all buildings, trees and the ground are white. People colours are not affected.' );
+			
+		addBoolean(
+			'cs', 'Cartoon style', false, {debug:true},
+			'If checked, people, houses and trees are drawn in cartoon style &ndash white with heavy contrast shading.' );
+			
+		addNumeric(
+			'bst', 'Block split treshold', 110, {min:100, max:500, step:10, unit:'m'},
+			'This parameter is used when the city layout is generated. If a block is larger than this value, then it is considered for splitting into smaller blocks.' );
+
+		addNumeric(
+			'bm', 'Block split margin', 30, {min:30, max:100, step:10, unit:'m'},
+			'If a block is split into smaller blocks, they must be larger than this number. If it is not possible, then the block is split in the middle.' );
+
+
+
+
+
+
+
+		document.getElementById( 'param_count' ).innerHTML = ids.length;
+		
 		var filter = localStorage.getItem( LOCAL_STORAGE_FILTER ) || 'show-fav';
 		document.getElementById( filter ).checked = true;
 		toggleFilter();
