--- a/covid-19-configurator.html
+++ b/covid-19-configurator.html
@@ -60,7 +60,7 @@
 			'The active area of the simulation in meters. Buildings and people will be bound to a square of this size.' );
 
 		addNumeric(
-			'es', 'Earth size', 50000, {min:1000, max:100000, step:1000, unit:'m'},
+			'es', 'Earth size', 50000, {min:1000, max:100000, step:1000, unit:'m', offset: 7.4},
 			'The area surrounding the simulation area. Its edge makes the horizon.' );
 
 		addNumeric(
@@ -225,12 +225,51 @@
 
 		addPercentage(
 			'bpp', 'Park probability', 0.05, {min:0, max:1, step:0.01},
-			'Probabiliy of a block to be generated as a park. Larger values make more green open areas in the city. Too small residential blocks will be turned into parks independent on this parameter.' );
+			'Probability of a block to be generated as a park. Larger values make more green open areas in the city. Too small residential blocks will be turned into parks independent on this parameter.' );
 
 		addPercentage(
 			'bzp', 'Plaza probability', 0.03, {min:0, max:1, step:0.01},
-			'Probabiliy of a block to be generated as a plaza. Larger values make more open areas in the city. This probability is tested after <em>Park probability</em>.' );
+			'Probability of a block to be generated as a plaza. Larger values make more open areas in the city. This probability is tested after <em>Park probability</em>.' );
 
+		addPercentage(
+			'ovr', 'Office vs residential', 0.05, {min:-1, max:1, step:0.01},
+			'The probability of a block to be for office buildings or for residential buildings depends on the computed maximal height of the block. <em>Office vs residential</em> contributes to this probability by increasig or decreasing it. Value 100% generates only office buildings; value -100% generates only residential buildings; value 0% keeps the originally computed probability.</em>.' );
+
+		addNumeric(
+			'sw', 'Street width', 6, {min:1, max:20, step:1, unit:'m'},
+			'Street width in meters. Blocks are split by streets of this size.' );
+
+		addNumeric(
+			'aw', 'Avenue width', 18, {min:1, max:40, step:1, unit:'m'},
+			'Avenue width in meters. Exceptionally large blocks are initially split by avenues of this size.' );
+
+		addNumeric(
+			'at', 'Avenue treshold', 1000, {min:100, max:2000, step:100, unit:'m'},
+			'If a block is larger than this size, it might be split by an avenue, otherwise &ndash; by a street.' );
+
+		addPercentage(
+			'sut', 'Suburb treshold', 0.16, {min:0, max:1, step:0.01},
+			'Percentage of <em>Ground size</em>. If a block is larger than this size and it is in the suburbs of the city, it might be made as park. This makes the shape of the city less squarish.' );
+
+		addPercentage(
+			'urru', 'Rural-urban', 0.3, {min:0, max:1, step:0.1},
+			'Percentage of how rural or urban is the generated area. Approximate values are: 100% for vilages, 70% for small towns, 50% for towns, 30% for cities and 0% for megalopolises. The effect is visible when <em>Ground size</em> is larger (at least a few kilometers).' );
+
+		addPercentage(
+			'sks', 'Skyscrapers', 0.2, {min:-1, max:1, step:0.1},
+			'The probability of a skyscaper depends on the computed maximal height of the block. <em>Skyscrapers</em> contributes to this probability by increasig or decreasing it. Value 100% generates mostly skyscrapers; value -100% tries to avoid them.</em>.' );
+
+		addNumeric(
+			'fh', 'Floor height', 2.5, {min:1, max:4, step:0.1, unit:'m'},
+			'Height of a floor (storey) in meters. The same height is used for all buildings &ndash; residential and business.' );
+
+		addNumeric(
+			'mf', 'Maximal floors', 120, {min:10, max:400, step:10},
+			'Maximal number of floors in in the tallest buildigs.' );
+
+		addNumeric(
+			'hbr', 'House bounding radius', 5, {min:4, max:20, step:1},
+			'The radius of invisible circle around a house. It determins how wide a house can be, how close it to neghtbour houses and how it is positioned in a block. Larger radius makes sparse house distribution.' );
 
 
 
