--- a/covid-19-configurator.html
+++ b/covid-19-configurator.html
@@ -55,6 +55,20 @@
 
 
 	<script>
+	
+// CITY LAYOUT ===================================
+
+		addHeader(
+			1, 'City', 'city',
+			'These prameters control the generation of the city layout.' );
+
+		addHeader(
+			2, 'General' );
+
+		addNumeric(
+			'rs', 'Random layout', 0, {min:0, max:100000, step:1, debug:true},
+			'The number that determines the layout of streets and buildings. If 0, the simulator will pick an arbitrary layout. It not 0, the simulator will use that spacific layout if the other configuration parameters are the same.' );
+
 		addNumeric(
 			'gs', 'Ground size', 500, {min:10, max:10000, step:10, fav:true, unit:'m'},
 			'The active area of the simulation in meters. Buildings and people will be bound to a square of this size.' );
@@ -63,29 +77,38 @@
 			'es', 'Earth size', 50000, {min:1000, max:100000, step:1000, unit:'m', offset: 7.4},
 			'The area surrounding the simulation area. Its edge makes the horizon.' );
 
-		addNumeric(
-			'rs', 'Random layout', 0, {min:0, max:100000, step:1, debug:true},
-			'The number that determines the layout of streets and buildings. If 0, the simulator will pick an arbitrary layout. It not 0, the simulator will use that spacific layout if the other configuration parameters are the same.' );
+		addHeader(
+			2, 'Blocks' );
 
 		addNumeric(
-			'damc', 'Agent count', 100, {min:0, max:50000, step:100, fav:true},
-			'The maximal number of people in the simulation. Their number might be smaller if the amount of houses and apartments are not sufficient for all of them.' );
+			'bst', 'Block split treshold', 110, {min:50, max:500, step:10, unit:'m'},
+			'This parameter is used when the city layout is generated. If a block is larger than this value, then it is considered for splitting into smaller blocks.' );
+
+		addNumeric(
+			'bm', 'Block split margin', 30, {min:10, max:100, step:10, unit:'m'},
+			'If a block is split into smaller blocks, they must be larger than this number. <em>Block split margin</em> should not exceed <em>Block split treshold/3</em>, if it exeeds it, then <em>Block split treshold/3</em> will be used. If the value is too small, it may prevent the formation of sloped streets in the city.' );
+
+		addHeader(
+			2, 'Navigational mesh' );
+
+		addPercentage(
+			'dnmo', 'Navmesh opacity', 0, {min:0, max:1, step:0.25, debug:true},
+			'Percentage of opacity of the navigational mesh (navmesh) &ndash; crimson and orange areas showing locations of rooms, elevators, checkpoints, etc. At 100% the navmesh is fully opaque, while at 0% it is fully transparent. Navmeshes are shown on top of buildings and other 3D objects.' );
+			
+		addBoolean(
+			'dnmsf', 'Navmesh floors', false, {debug:true},
+			'If checked, generates images of navmesh rooms at the floor level. However, they are shown only if <em>Navmesh opacity</em> is not 0%.' );
 
 		addBoolean(
-			'drw', 'RANDOM WANDERING', false, {debug:true},
-			'If checked, the people are walking in random directions and they do not follow any routine. If not checked, the people follow their daily routine.' );
+			'dnmsl', 'Navmesh routes', false, {debug:true},
+			'If checked, generates images of navmesh routes. However, they are shown only if <em>Navmesh opacity</em> is not 0%.' );
 
 		addBoolean(
-			'dfal', 'Line formation', false, {debug:true},
-			'If checked, the people are positioned in lines and columns. If not checked, the people are positioned in buildings.' );
+			'dnmse', 'Navmesh elevators', false, {debug:true},
+			'If checked, generates images of navmesh elevators. However, they are shown only if <em>Navmesh opacity</em> is not 0%.' );
 
-		addTime(
-			'dts', 'Time speed', timeMs(0,0,1), {min:timeMs(0,0,1), max:timeMs(1,0,0), step:timeMs(0,0,1),debug:true},
-			'How much virtual time passes for 1 second of real time. For example, 00:00:01 is for realtime simulation, 00:00:05 is for simulation 5 times faster.' );
-
-		addTime(
-			'st', 'Start time', timeMs(6,20), {min:timeMs(0,0,0), max:timeMs(23,59,59), step:timeMs(0,10,0),debug:true},
-			'The virtual time at which the simulation starts.' );
+		addHeader(
+			2, 'Others' );
 
 		addBoolean(
 			'dbwoh', 'Blocks with houses', false, {debug:true},
@@ -107,18 +130,6 @@
 			'dbwoz', 'Blocks with plazas', false, {debug:true},
 			'If checked, generate blocks with plazas. However, all <em>Blocks with ...</em> parameters are altogether not checked, then blocks with plazas are generated.' );
 
-		addBoolean(
-			'dar', 'Auto rotate', false, {debug:true},
-			'If checked, the scene rotates continuously with speed defined by <em>Auto rotate speed</em>. The user can still use the mouse to rotate manually. If not checked, the scene does not move by itself.' );
-
-		addNumeric(
-			'dars', 'Auto rotate speed', 0.3, {min:0, max:1, step:0.1, debug:true, unit:'rad/s', offset: 7},
-			'The speed of automatic rotation measure in radians per second. The value is effective only if <em>Auto rotate</em> is checked, otherwise it has no effect.' );
-
-		addBoolean(
-			'dri', 'Renderer info', false, {debug:true},
-			'If checked, shows renderer info (once per 10000 frames) in the JS console &ndash; number of geometries, textures, calls, lines, points and triangles.' );
-
 		addPercentage(
 			'dbuo', 'Building opacity', 1, {min:0, max:1, step:0.25, debug:true},
 			'Percentage of opacity of all buildings &ndash; houses, apartments and offices. At 100% the buildings are fully opaque, while at 0% they are fully transparent.' );
@@ -127,45 +138,9 @@
 			'dblo', 'Ground opacity', 1, {min:0, max:1, step:0.25, debug:true},
 			'Percentage of opacity of the ground &ndash; pavements, streets, grass. At 100% the ground is fully opaque, while at 0% it is fully transparent.' );
 			
-		addPercentage(
-			'dnmo', 'Navmesh opacity', 0, {min:0, max:1, step:0.25, debug:true},
-			'Percentage of opacity of the navigational mesh (navmesh) &ndash; crimson and orange areas showing locations of rooms, elevators, checkpoints, etc. At 100% the navmesh is fully opaque, while at 0% it is fully transparent. Navmeshes are shown on top of buildings and other 3D objects.' );
-			
-		addBoolean(
-			'dnmsf', 'Navmesh floors', false, {debug:true},
-			'If checked, generates images of navmesh rooms at the floor level. However, they are shown only if <em>Navmesh opacity</em> is not 0%.' );
-
-		addBoolean(
-			'dnmsl', 'Navmesh routes', false, {debug:true},
-			'If checked, generates images of navmesh routes. However, they are shown only if <em>Navmesh opacity</em> is not 0%.' );
-
-		addBoolean(
-			'dnmse', 'Navmesh elevators', false, {debug:true},
-			'If checked, generates images of navmesh elevators. However, they are shown only if <em>Navmesh opacity</em> is not 0%.' );
-
-		addBoolean(
-			'dsaad', 'Age diagram', false, {debug:true},
-			'If checked, shows a diagram of age distribution of people (number of people per age in years). The theoretical distribution is shown in crimson, the actual distribution is shown in blue. Click on the diagram to hide it.' );
-
-		addBoolean(
-			'dsvs', 'Viral diagram', false, {debug:true},
-			'If checked, shows a diagram of the viral shedding (infection level per time period). Higher values indicate higher probability of infecting nearby people. Vertical lines split the diagram into 14 periods. Click on the diagram to hide it.' );
-
 		addBoolean(
 			'dhr', 'Hide roofs', false, {debug:true},
 			'If checked, buildings are drawn without roofs and it is possibel to see people inside.' );
-
-		addBoolean(
-			'dcvoa', 'Look at people', false, {debug:true},
-			'If checked, when the simulation starts, sets the view point on the people. This can be used to find people if they are a small compact group in a large city.' );
-
-		addNumeric(
-			'dfa', 'Follow person', -1, {min:-1, max:50000, step:1, debug:true},
-			'Each person has an id number starting from 0. If this parameter cointains an existing person id, then the view point automatically follows this person as if spied from a drone. If the value is -1, such following is turned off.' );
-
-		addNumeric(
-			'dfah', 'Follow person health', -1, {min:-1, max:50000, step:1, debug:true},
-			'If this parameter cointains an existing person id, then the health status of this person is printed in the JS console. If the value is -1, such printing is turned off.' );
 
 		addBoolean(
 			'dsd', 'Show directions', false, {debug:true},
@@ -174,54 +149,6 @@
 		addBoolean(
 			'daaf', 'Apartment floors', false, {debug:true},
 			'If checked, the floors of the apartment building are drawn. To see the floors the view point should be inside the building or <em>Building opacity</em> should be less than 100%.' );
-
-		addBoolean(
-			'dshtwa', 'Home-to-work arrow', false, {debug:true},
-			'If checked, an arrow is generated for each person pointing from home to office location.' );
-
-		addBoolean(
-			'dsr', 'Show route', false, {debug:true},
-			'If checked, show the route of each person as a sequence of arrows.' );
-
-		addBoolean(
-			'ddr', 'Print route', false, {debug:true},
-			'If checked, prints the route of each person in the JS console. This parameter is checked when there are a few people, preferable exactly one, i.e. <em>Agent count</em>=1.' );
-
-		addNumeric(
-			'drpa', 'Routes per person', 1, {min:1, max:200, step:1, debug:true},
-			'The number of routes generated for each person. Independent on the value, onle one of the routes is used. THe others only indicate what possibilities exists. This parameter is often used with <em>Show route</em> checked and <em>Agent count</em>=1.' );
-
-		addNumeric(
-			'daa', 'Follow person actions', -1, {min:-1, max:50000, step:1, debug:true},
-			'If this parameter cointains an existing person id, then the timestamped actions of  this person are printed in the JS console. If the value is -1, such printing is turned off.' );
-
-		addBoolean(
-			'dal', 'Population whereabouts', false, {debug:true},
-			'If checked, once per second prints in the JS console the number of people at home, commuting and at work.' );
-			
-		addBoolean(
-			'dah', 'Population health', false, {debug:true},
-			'If checked, once per second prints in the JS console the number of infected people.' );
-			
-		addBoolean(
-			'dspg', 'Manual sun', false, {debug:true},
-			'If checked, adds a control for manually changing the sun position. This affects lightings and shadows (if they are turned on). The position is set as hours &ndash; i.e. 18.5 corresponds to 18:30.' );
-			
-		addBoolean(
-			'daw', 'All white', false, {debug:true},
-			'If checked, all buildings, trees and the ground are white. People colours are not affected.' );
-			
-		addBoolean(
-			'cs', 'Cartoon style', false, {debug:true},
-			'If checked, people, houses and trees are drawn in cartoon style &ndash white with heavy contrast shading.' );
-			
-		addNumeric(
-			'bst', 'Block split treshold', 110, {min:50, max:500, step:10, unit:'m'},
-			'This parameter is used when the city layout is generated. If a block is larger than this value, then it is considered for splitting into smaller blocks.' );
-
-		addNumeric(
-			'bm', 'Block split margin', 30, {min:10, max:100, step:10, unit:'m'},
-			'If a block is split into smaller blocks, they must be larger than this number. <em>Block split margin</em> should not exceed <em>Block split treshold/3</em>, if it exeeds it, then <em>Block split treshold/3</em> will be used. If the value is too small, it may prevent the formation of sloped streets in the city.' );
 
 		addPercentage(
 			'bpp', 'Park probability', 0.05, {min:0, max:1, step:0.01},
@@ -270,6 +197,138 @@
 		addNumeric(
 			'hbr', 'House bounding radius', 5, {min:4, max:20, step:1},
 			'The radius of invisible circle around a house. It determins how wide a house can be, how close it to neghtbour houses and how it is positioned in a block. Larger radius makes sparse house distribution.' );
+
+// PEOPLE ===================================
+
+		addHeader(
+			1, 'People', 'people',
+			'These prameters control the generation of virtual people, their properties and behaviour.' );
+
+		addHeader(
+			2, 'General' );
+
+		addNumeric(
+			'damc', 'Agent count', 100, {min:0, max:50000, step:100, fav:true},
+			'The maximal number of people in the simulation. Their number might be smaller if the amount of houses and apartments are not sufficient for all of them.' );
+
+		addHeader(
+			2, 'Behaviour' );
+
+		addBoolean(
+			'drw', 'RANDOM WANDERING', false, {debug:true},
+			'If checked, the people are walking in random directions and they do not follow any routine. If not checked, the people follow their daily routine.' );
+
+		addBoolean(
+			'dfal', 'Line formation', false, {debug:true},
+			'If checked, the people are positioned in lines and columns. If not checked, the people are positioned in buildings.' );
+
+		addBoolean(
+			'dsaad', 'Age diagram', false, {debug:true},
+			'If checked, shows a diagram of age distribution of people (number of people per age in years). The theoretical distribution is shown in crimson, the actual distribution is shown in blue. Click on the diagram to hide it.' );
+
+		addBoolean(
+			'dsvs', 'Viral diagram', false, {debug:true},
+			'If checked, shows a diagram of the viral shedding (infection level per time period). Higher values indicate higher probability of infecting nearby people. Vertical lines split the diagram into 14 periods. Click on the diagram to hide it.' );
+
+		addBoolean(
+			'dcvoa', 'Look at people', false, {debug:true},
+			'If checked, when the simulation starts, sets the view point on the people. This can be used to find people if they are a small compact group in a large city.' );
+
+		addNumeric(
+			'dfa', 'Follow person', -1, {min:-1, max:50000, step:1, debug:true},
+			'Each person has an id number starting from 0. If this parameter cointains an existing person id, then the view point automatically follows this person as if spied from a drone. If the value is -1, such following is turned off.' );
+
+		addNumeric(
+			'dfah', 'Follow person health', -1, {min:-1, max:50000, step:1, debug:true},
+			'If this parameter cointains an existing person id, then the health status of this person is printed in the JS console. If the value is -1, such printing is turned off.' );
+
+		addBoolean(
+			'dshtwa', 'Home-to-work arrow', false, {debug:true},
+			'If checked, an arrow is generated for each person pointing from home to office location.' );
+
+		addBoolean(
+			'dsr', 'Show route', false, {debug:true},
+			'If checked, show the route of each person as a sequence of arrows.' );
+
+		addBoolean(
+			'ddr', 'Print route', false, {debug:true},
+			'If checked, prints the route of each person in the JS console. This parameter is checked when there are a few people, preferable exactly one, i.e. <em>Agent count</em>=1.' );
+
+		addNumeric(
+			'drpa', 'Routes per person', 1, {min:1, max:200, step:1, debug:true},
+			'The number of routes generated for each person. Independent on the value, onle one of the routes is used. THe others only indicate what possibilities exists. This parameter is often used with <em>Show route</em> checked and <em>Agent count</em>=1.' );
+
+		addNumeric(
+			'daa', 'Follow person actions', -1, {min:-1, max:50000, step:1, debug:true},
+			'If this parameter cointains an existing person id, then the timestamped actions of  this person are printed in the JS console. If the value is -1, such printing is turned off.' );
+
+		addBoolean(
+			'dal', 'Population whereabouts', false, {debug:true},
+			'If checked, once per second prints in the JS console the number of people at home, commuting and at work.' );
+			
+		addBoolean(
+			'dah', 'Population health', false, {debug:true},
+			'If checked, once per second prints in the JS console the number of infected people.' );
+			
+
+// NAVIGATION ===================================
+
+		addHeader(
+			1, 'Navigation', '',
+			'These prameters control how the user navigates in the city.' );
+
+		addBoolean(
+			'dar', 'Auto rotate', false, {debug:true},
+			'If checked, the scene rotates continuously with speed defined by <em>Auto rotate speed</em>. The user can still use the mouse to rotate manually. If not checked, the scene does not move by itself.' );
+
+		addNumeric(
+			'dars', 'Auto rotate speed', 0.3, {min:0, max:1, step:0.1, debug:true, unit:'rad/s', offset: 7},
+			'The speed of automatic rotation measure in radians per second. The value is effective only if <em>Auto rotate</em> is checked, otherwise it has no effect.' );
+
+// GRAPHICS AND STYLE ===================================
+
+		addHeader(
+			1, 'Graphics and style', '',
+			'These prameters control the visual effects.' );
+
+		addBoolean(
+			'daw', 'All white', false, {debug:true},
+			'If checked, all buildings, trees and the ground are white. People colours are not affected.' );
+			
+		addBoolean(
+			'cs', 'Cartoon style', false, {debug:true},
+			'If checked, people, houses and trees are drawn in cartoon style &ndash white with heavy contrast shading.' );
+
+// NATURE ===================================
+
+		addHeader(
+			1, 'NATURE', '',
+			'These prameters control the nature &ndash; time, sun, etc.' );
+
+		addTime(
+			'dts', 'Time speed', timeMs(0,0,1), {min:timeMs(0,0,1), max:timeMs(1,0,0), step:timeMs(0,0,1),debug:true},
+			'How much virtual time passes for 1 second of real time. For example, 00:00:01 is for realtime simulation, 00:00:05 is for simulation 5 times faster.' );
+
+		addTime(
+			'st', 'Start time', timeMs(6,20), {min:timeMs(0,0,0), max:timeMs(23,59,59), step:timeMs(0,10,0),debug:true},
+			'The virtual time at which the simulation starts.' );
+
+		addBoolean(
+			'dspg', 'Manual sun', false, {debug:true},
+			'If checked, adds a control for manually changing the sun position. This affects lightings and shadows (if they are turned on). The position is set as hours &ndash; i.e. 18.5 corresponds to 18:30.' );
+
+// MISC ===================================
+
+		addHeader(
+			1, 'Miscallaneous', '',
+			'These prameters control the generation of virtual people, their properties and behaviour.' );
+
+		addBoolean(
+			'dri', 'Renderer info', false, {debug:true},
+			'If checked, shows renderer info (once per 10000 frames) in the JS console &ndash; number of geometries, textures, calls, lines, points and triangles.' );
+
+			
+			
 
 
 
