--- a/covid-19-configurator.html
+++ b/covid-19-configurator.html
@@ -29,8 +29,7 @@
 	<div class="info">The COVID-19 simulation is controlled by <span id="param_count"></span> parameters. Click on the name of a parameter to add or remove it from
 	the list of your favourite parameters. The information from this page is
 	stored only locally &ndash; it is not transmitted anywhere.
-	<button onclick="resetConfigurator()">Reset</button>
-	<button onclick="debugConfigurator()">Debug</button>
+	[<button class="syslink" onclick="resetConfigurator()">Reset</button>|<button class="syslink" onclick="debugConfigurator()">Debug</button>|<button class="syslink" onclick="shareConfigurator()">Share</button>]
 	</div>
 </h2>
 	
@@ -359,7 +358,11 @@
 			
 		addNumericRange(
 			'orc', 'Office room count', 2, 9, {min:2, max:15, step:1},
-			'The desired number of office rooms. The actual number depends on this value, as well of building size and <em>Office room size</em>.' );
+			'The desired number of office rooms. The actual number depends on this value, as well of building size and <em>Office room size</em>. Larger count results in smaller rooms and vice versa.' );
+
+		addNumericRange(
+			'abw', 'Apartment building width', 8, 16, {min:4, max:30, step:2, unit: 'm'},
+			'The range for the length (in meters) of the smaller wall of an apartment building. The length of the longer wall is restricted by the block size.' );
 			
 
 			
