Fixed some default values

--- a/covid-19-configurator.html
+++ b/covid-19-configurator.html
@@ -28,7 +28,7 @@
 <h2>COVID-19 Configurator
 	<div class="info">The COVID-19 simulation is controlled by <span id="param_count"></span> parameters. Click on the name of a parameter to add or remove it from
 	the list of your favourite parameters. The information from this page is
-	stored only locally &ndash; it is not transmitted anywhere.
+	stored only to your computer &ndash; it is not transmitted anywhere.
 	[<button class="syslink" onclick="resetConfigurator()">Reset</button>|<button class="syslink" onclick="debugConfigurator()">Debug</button>|<button class="syslink" onclick="shareConfigurator()">Share</button>]
 	</div>
 </h2>
