Fixed bugs in handling default values in the configurator

--- a/covid-19-configurator.html
+++ b/covid-19-configurator.html
@@ -26,7 +26,7 @@
 <body>
 <div class="page">
 <h2>COVID-19 Configurator (under development)
-	<div class="info">The COVID-19 simulation is controlled by <span id="param_count"></span> parameters (they are more than 100, but the rest are still not implemented in the configurator). Click on the name of a parameter to add or remove it from
+	<div class="info">The COVID-19 simulation is controlled by <span id="param_count"></span> parameters. Click on the name of a parameter to add or remove it from
 	the list of your favourite parameters. The data from this page is
 	stored only in your browser &ndash; it is not transmitted anywhere.<br><br>A few links that I often used during development (do not use them):
 	[<button class="syslink" onclick="resetConfigurator()">Reset</button>|<button class="syslink" onclick="debugConfigurator()">Debug</button>|<button class="syslink" onclick="shareConfigurator()">Share</button>]
@@ -49,6 +49,9 @@
 		<a class="start" href="covid-19-simulator.html" onclick="prepareValues()">Start simulation</a>
 	</div>
 	<br>
+	
+	<h2><div class="info">Note: There are more than 140 parameters. Not all of them are implemented in the configurator. Stay tuned. If you are unhappy of how parameters are grouped &ndash; that will be dealt with when all parameters are implemented. As well, there is a planned feature for tag-based filtering.
+	</div></h2>
 
 </div> <!--page-->	
 
